Fix alignment issues

--- a/app/css/lab-result-entry.scss
+++ b/app/css/lab-result-entry.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: center;
     font-weight: 900;
-    font-size: 20px;
+    font-size: 14px;
     flex-direction: row;
     text-align: center;
 }
@@ -25,13 +25,13 @@ fieldset {
 .lab-result-detail-fieldset {
     width: 48%;
     display: inline-table;
-    min-height: 140px;
+    min-height: 120px;
     margin-left: 1%;
     margin-right: 1%;
 }
 
 .lab-result-detail-fieldset-title{
-    font-size: 12px;
+    font-size: 14px;
 }
 
 .result-input {
@@ -107,7 +107,7 @@ button.pull-right.btn-success {
 .fieldset-body {
     width: 99%;
     height: 100%;
-    padding: 15px;
+    padding: 0px 15px;
     position: relative;
     align-self: left;
 }
@@ -232,12 +232,12 @@ button.pull-right.btn-success {
 
 .specimen-collection-date {
     position: absolute;
-    top: 60px;
+    top: 75px;
 }
 
 .estimated-checkbox {
     position: absolute;
-    top: 57px;
+    top:70px;
     left: 328px;
     white-space: nowrap;
 }
@@ -245,4 +245,14 @@ button.pull-right.btn-success {
 .obs-checkbox-edit-value {
     display: inline-block;
     margin-top: 15px;
+}
+
+.obs-dropdown-label {
+    white-space: nowrap;
+    line-height: 35px;
+}
+
+.observation-dropdown {
+    left: -295px;
+    margin-top: 10px;
 }
